<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="com.example.android.music.MainActivity">


    <TextView
        style="@style/CategoryStyle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_screen" />

    <TextView
        style="@style/CategoryStyle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_description" />

    <TextView
        android:id="@+id/playlists"
        style="@style/CategoryStyle"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/category_playlists"
        android:text="@string/category_playlists" />

    <TextView
        android:id="@+id/artists"
        style="@style/CategoryStyle"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/category_artists"
        android:text="@string/category_artists" />

    <TextView
        android:id="@+id/albums"
        style="@style/CategoryStyle"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/category_albums"
        android:text="@string/category_albums" />

    <TextView
        android:id="@+id/songs"
        style="@style/CategoryStyle"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/category_songs"
        android:text="@string/category_songs" />

    <TextView
        android:id="@+id/payment"
        style="@style/CategoryStyle"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/category_playlists"
        android:text="@string/buy_songs" />

    <TextView
        android:id="@+id/nowPlaying"
        style="@style/CategoryStyle"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/category_artists"
        android:text="@string/now_playing" />

</LinearLayout>
</ScrollView>

