<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.android.music.NowPlaying">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="12sp" />

        <TextView
            style="@style/CategoryStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/now_playing_screen"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_playlists">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:adjustViewBounds="true"
            android:maxHeight="42dp"
            android:maxWidth="42dp"
            android:scaleType="fitCenter"
            android:src="@drawable/chainsmokers_icon" />

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/closer" />

        <Button
            android:id="@+id/artist_nowPlaying"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist" />

        <Button
            android:id="@+id/album_nowPlaying"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album" />

    </LinearLayout>

    <TextView
        style="@style/CategoryStyle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/now_playing_description" />
</LinearLayout>


